<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:rowCount="5"
        android:columnCount="6">
        <android.widget.Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@color/black"
            android:text="@string/c"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <android.widget.Button
            android:id="@+id/btnBracket"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@color/black"

            android:text="@string/o"
            android:layout_columnWeight="1"

            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@color/black"
            android:text="@string/percent"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
 />

        <android.widget.Button
            android:id="@+id/btnDivisor"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="3"
            android:background="@color/black"
            android:text="@string/division"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@color/black"
            android:text="@string/_7"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"

            android:background="@color/black"
            android:text="@string/_9"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="3"
            android:background="@color/black"
            android:text="@string/multiply"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@color/black"
            android:text="@string/_4"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@color/black"
            android:text="@string/_6"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <android.widget.Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="3"
            android:background="@color/black"
            android:text="@string/minus"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <android.widget.Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@color/black"
            android:text="@string/_1"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <android.widget.Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@color/black"
            android:text="@string/_2"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <android.widget.Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:background="@color/black"
            android:text="@string/_3"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />


        <android.widget.Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="3"
            android:background="@color/black"
            android:text="@string/plus"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <android.widget.Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:background="@color/black"
            android:text="@string/_0"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <android.widget.Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:background="@color/black"
            android:text="@string/dot"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <android.widget.Button
            android:id="@+id/btnEqualsTo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="3"
            android:background="@color/orange"
            android:text="@string/equalsTo"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

    </GridLayout>
</RelativeLayout>